--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,10 @@
 							</outputDirectory>
 						</configuration>
 					</execution>
+
+					<!-- <execution> <configuration> <descriptorzip.xml</descriptor> <finalName>tpMaven-${version}</finalName> 
+						</configuration> <phase>install</phase> <goals> <goal>single</goal> </goals> 
+						</execution> -->
 				</executions>
 			</plugin>
 			<plugin>
@@ -137,6 +141,13 @@
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>cobertura-maven-plugin</artifactId>
 				<version>2.7</version>
+				<reportSets>
+					<reportSet>
+						<reports>
+							<report>cobertura</report>
+						</reports>
+					</reportSet>
+				</reportSets>
 			</plugin>
 		</plugins>
 	</reporting>
